--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "cd backend && npm start",
-    "prebuild":"cd backend && npm install & cd frontend && npm install", 
-    "build": "cd root169 && npm run build",
-    "postbuild": "shx mv root169/build backend"
+    "prebuild": "cd backend && npm install && cd ../root169 && npm install",
+    "build": "cd frontend && npm run build",
+    "postbuild": "shx mv frontend/build backend"
   },
   "keywords": [],
   "author": "",
