--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "flashcard",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
+ "scripts": {
   "start": "cd backend && npm start",
   "prebuild": "cd backend && npm install && cd ../root169 && npm install",
   "build": "cd root169 && npm run build",
-  "postbuild": "shx mv root169/build backend || move /Y root169\\build backend"
+  "postbuild": "echo 'Build completed' && xcopy /E /I root169\\build backend\\build"
 }
 ,
   "keywords": [],
